docs/book/samples/ch08/positions.out
error[formatting]: function declarations appear in alphabetical order: `digit?` before `fail`
  --> positions.kso:26:4
  26 | fn digit? none
          ^
