docs/book/samples/ch08/positions.kso
import "std/text"

type parse_failure
  position:int
  reason:string

fn decode_int s
  cs = text/bytes s
  p = skip_ws cs 1
  q = digits_end cs p
  v = text/to_int (text/slice cs p (q - 1))
  trailing cs (skip_ws cs q) v

fn digits_end cs p
  if (digit? (cs[p])) (digits_end cs (p + 1)) p

fn fail p reason
  err (parse_failure p reason)

fn digit? none
  false

fn digit? c
  (47 < c) && (c < 58)

fn is_ws 9
  true

fn is_ws 10
  true

fn is_ws 13
  true

fn is_ws 32
  true

fn is_ws none
  false

fn is_ws _
  false

pub play =
  print (show (decode_int "  42  "))
  >> print (show (decode_int "1 x"))
  >> print (show (decode_int "  7 ;"))

fn show (err (parse_failure p reason))
  "err at {p}: {reason}"

fn show v
  "ok: {v}"

fn skip_ws cs p
  if (is_ws (cs[p])) (skip_ws cs (p + 1)) p

fn trailing cs p v
  if (p > (length cs)) v (fail p "unexpected trailing characters")
